--- a/src/templates/engage-lazard.html
+++ b/src/templates/engage-lazard.html
@@ -36,8 +36,8 @@
 								<table style border="0" cellpadding="8px" cellspacing="0" role="presentation" width="100%" class="layout_mobile-one-column">
 									<tr>
 										<td class="column" style="width: 220px;">
-											<h1 class="sans">Engage @ Lazard</h1>
-											<br>
+											<h1 class="sans margin-b-16">Engage @ Lazard</h1>
+											
 											<h2 class="subheadline">New Ideas, New Perspectives.</h2>
 										</td>
 										<td class="column"></td>
@@ -48,12 +48,12 @@
 											-->
 											<!--[if mso]>
 												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
-													style="height:32px;v-text-anchor:middle;color:#ffffff;width:100%;" 
+													style="height:32px;v-text-anchor:middle;color:#ffffff;width:98px;" 
 													fillcolor="#00539A">
 													<w:anchorlock/>
 													<center>
 											<![endif]-->
-											<a target="_blank" href="https://lazard.com/" style="width: 100%" class="btn pill">
+											<a target="_blank" href="https://lazard.com/" style="width: 98px" class="btn pill">
 												<!--[if !mso]><!--><span><!--<![endif]-->Visit<!--[if !mso]><!--></span><!--<![endif]-->
 											</a>
 											<!--[if mso]>
@@ -93,12 +93,12 @@
 											-->
 											<!--[if mso]>
 												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
-													style="height:32px;v-text-anchor:middle;color:#00539A;width:100%;" 
+													style="height:32px;v-text-anchor:middle;color:#00539A;width:98px;" 
 													fillcolor="#ffffff">
 													<w:anchorlock/>
 													<center class="mso">
 											<![endif]-->
-											<a target="_blank" href="https://lazard.com/" style="width: 100%" class="btn pill @@variant">
+											<a target="_blank" href="https://lazard.com/" style="width: 98px" class="btn pill @@variant">
 												<!--[if !mso]><!--><span><!--<![endif]-->Visit<!--[if !mso]><!--></span><!--<![endif]-->
 											</a>
 											<!--[if mso]>
@@ -171,18 +171,15 @@
 										<td class="column">
 											<!-- <img style="" src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_ContentImage_Field.png" alt="First Column Feature image" width="263" border="0" class="d-block"> -->
 											<img style src="https://placehold.co/264x148" alt="First Column Feature image" width="263" border="0" class="d-block">
-											<p></p>
-											<br>
+																						
+											<h4 class="sans margin-b-8 margin-t-16">Aaron Binsted appears on Livewire Markets' The Pitch</h4>
 											
-											<h4>Aaron Binsted appears on Livewire Markets' The Pitch</h4>
-											<br>
-											<h3 class="subheadline">Tuesday, October 31, 1:00PM eT</h3>
-											<br>
-											<p style="width: 193px;" class="d-block paragraph-2">Aaron Binsted, Portfolio Manager / Analyst on the Australian Equity team, joins Livewire Markets' The Pitch to discuss Australia's big banks and three potential opportunities.</p>
-											<br>
+											<h3 class="subheadline margin-b-8">Tuesday, October 31, 1:00PM eT</h3>
+											
+											<p style="width: 193px;" class="d-block paragraph-2 margin-b-16">Aaron Binsted, Portfolio Manager / Analyst on the Australian Equity team, joins Livewire Markets' The Pitch to discuss Australia's big banks and three potential opportunities.</p>
 			
-											<h3 class="subheadline">Australia</h3>
-											<br>
+											<h3 class="subheadline margin-b-8">Australia</h3>
+											
 											<table role="presentation" cellpadding="0" cellspacing="0" class="btn open-in-new">
 												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
@@ -212,10 +209,9 @@
 													</td>
 												</tr>
 											</table>											
-											<br>
 			
-											<h3 class="subheadline">Australia</h3>
-											<br>
+											<h3 class="subheadline margin-b-8 margin-t-16">Australia</h3>
+											
 											<table role="presentation" cellpadding="0" cellspacing="0" class="btn open-in-new">
 												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
@@ -245,10 +241,9 @@
 													</td>
 												</tr>
 											</table>
-											<br>
-			
-											<h3 class="subheadline">Australia</h3>
-											<br>
+											
+											<h3 class="subheadline margin-b-8 margin-t-16">Australia</h3>
+
 											<table role="presentation" cellpadding="0" cellspacing="0" class="btn open-in-new">
 												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
@@ -278,24 +273,21 @@
 													</td>
 												</tr>
 											</table>
-											<br>
 			
-											<a href="https://lazard.com" class="btn text ">Read more <span>&#8594;</span></a>
+											<a href="https://lazard.com" class="btn text margin-t-16">Read more <span>&#8594;</span></a>
 										</td>
 										<td class="column">
 											<!-- <img style="" src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_ContentImage_Station.png" alt="Second Column Feature image" width="263" border="0" class="d-block"> -->
 											<img style src="https://placehold.co/264x148" alt="Second Column Feature image" width="263" border="0" class="d-block">
-											<p></p>
-											<br>
-											<h4>Fund in Focus with Warryn Robertson</h4>
-											<br>
-											<h3 class="subheadline">Tuesday, October 31, 1:00PM eT</h3>
-											<br>
-											<p style="width: 193px;" class="d-block paragraph-2">Warryn Robertson, Portfolio Manager/Analyst on the Global Listed Infrastructure team, delves into the major trends in infrastructure, highlights key holdings within the portfolio, and outlines the team’s meticulous process for identifying attractive investment opportunities. Warryn also shares the rationale behind why the Lazard Global Listed Infrastructure Fund is now available as a dual-access Active ETF.</p>
-											<br>
+											
+											<h4 class="sans margin-b-8 margin-t-16">Fund in Focus with Warryn Robertson</h4>
+											
+											<h3 class="subheadline margin-b-8">Tuesday, October 31, 1:00PM eT</h3>
+											
+											<p style="width: 193px;" class="d-block paragraph-2 margin-b-16">Warryn Robertson, Portfolio Manager/Analyst on the Global Listed Infrastructure team, delves into the major trends in infrastructure, highlights key holdings within the portfolio, and outlines the team’s meticulous process for identifying attractive investment opportunities. Warryn also shares the rationale behind why the Lazard Global Listed Infrastructure Fund is now available as a dual-access Active ETF.</p>
 			
-											<h3 class="subheadline">Australia</h3>
-											<br>
+											<h3 class="subheadline margin-b-8">Australia</h3>
+											
 											<table role="presentation" cellpadding="0" cellspacing="0" class="btn open-in-new">
 												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
@@ -325,10 +317,9 @@
 													</td>
 												</tr>
 											</table>
-											<br>
 			
-											<h3 class="subheadline">Australia</h3>
-											<br>
+											<h3 class="subheadline margin-b-8 margin-t-16">Australia</h3>
+											
 											<table role="presentation" cellpadding="0" cellspacing="0" class="btn open-in-new">
 												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
@@ -358,10 +349,9 @@
 													</td>
 												</tr>
 											</table>
-											<br>
 			
-											<h3 class="subheadline">Australia</h3>
-											<br>
+											<h3 class="subheadline margin-b-8 margin-t-16">Australia</h3>
+											
 											<table role="presentation" cellpadding="0" cellspacing="0" class="btn open-in-new">
 												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
@@ -391,9 +381,8 @@
 													</td>
 												</tr>
 											</table>
-											<br>
 			
-											<a href="https://lazard.com" class="btn text ">See all highlights <span>&#8594;</span></a>
+											<a href="https://lazard.com" class="btn text margin-t-16">See all highlights <span>&#8594;</span></a>
 										</td>
 									</tr>
 								</table>
@@ -427,12 +416,12 @@
 											-->
 											<!--[if mso]>
 												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
-													style="height:32px;v-text-anchor:middle;color:#ffffff;width:100%;" 
+													style="height:32px;v-text-anchor:middle;color:#ffffff;width:98px;" 
 													fillcolor="#00539A">
 													<w:anchorlock/>
 													<center>
 											<![endif]-->
-											<a target="_blank" href="https://lazard.com/" style="width: 100%" class="btn pill">
+											<a target="_blank" href="https://lazard.com/" style="width: 98px" class="btn pill">
 												<!--[if !mso]><!--><span><!--<![endif]-->Download<!--[if !mso]><!--></span><!--<![endif]-->
 											</a>
 											<!--[if mso]>
@@ -467,10 +456,10 @@
 											<img src="https://placehold.co/54x74" alt="Table Thumbnail" width="54px" height="74px">
 										</td>
 										<td>
-											<h4 class="sans" style="width: 165px;">Annual Sustainable Investment Report</h4>
-											<br>
-											<p>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
-											<br>
+											<h4 class="sans margin-b-16" style="width: 165px;">Annual Sustainable Investment Report</h4>
+											
+											<p class="margin-b-16">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
+											
 											<a href="https://lazard.com" class="btn text ">Download <span>&#8594;</span></a>
 										</td>
 									</tr>
@@ -499,8 +488,8 @@
 											<!--
 												Component: Eyebrow
 											-->
-											<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">Fixed Income Viewpoints</span></p>
-											<br>
+											<p class="eyebrow margin-b-16"><span class="bullet">&bull;</span> <span class="label">Fixed Income Viewpoints</span></p>
+											
 											<h2 class="sans">The Plot Thickens</h2>
 										</td>
 										<td class="column">
@@ -547,8 +536,8 @@
 									<tr class="layout_mobile-one-column">
 										<td width="124" style="font-size:1px; line-height:21px;" class="column">&nbsp;</td>
 										<td class="column">
-											<p class="paragraph-2">In Viewpoints this month, our fixed income team has sifted through central bank rate cuts, surprise election outcomes, currency swings, and mixed signals on the US economy for what investors should be watching.</p>
-											<br>
+											<p class="paragraph-2 margin-b-16">In Viewpoints this month, our fixed income team has sifted through central bank rate cuts, surprise election outcomes, currency swings, and mixed signals on the US economy for what investors should be watching.</p>
+											
 											<a href="https://lazard.com" class="btn text ">Text Button <span>&#8594;</span></a>
 										</td>
 									</tr>
@@ -574,14 +563,13 @@
 								<!--
 									Component: Eyebrow
 								-->
-								<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">What's Trending</span></p>
-								<br>
-								<h2 class="subheadline">Emerging Markets Investment Grade Yields</h2>
-								<br>
+								<p class="eyebrow margin-b-16"><span class="bullet">&bull;</span> <span class="label">What's Trending</span></p>
+
+								<h2 class="subheadline margin-b-16">Emerging Markets Investment Grade Yields</h2>
+								
 								<!-- <img style src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_ContentImage_1YGraph.png" alt="1Y Grades Chart" class="mw-100" /> -->
-								<img src="https://placehold.co/542x304" alt="Feature Image" width="542px">
-								<p></p> <!-- Spacer <p> for MSO image margin -->
-								<br>
+								<img src="https://placehold.co/542x304" alt="Feature Image" width="542px" class="margin-b-16">
+								
 								<p class="disclaimer">As of 26 October 2023</p>
 								<p class="disclaimer">Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG</p>
 								<p class="disclaimer">Source: Lazard, JP Morgan</p>
