--- a/src/templates/em-monitor.html
+++ b/src/templates/em-monitor.html
@@ -47,16 +47,15 @@
 								<!--
 									Component: Eyebrow
 								-->
-								<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">Emerging Market Monitor</span></p>
-								<br>
-								<h2 class="sans">Is manufacturing shifting from China to India?</h2>
-								<br>								
+								<p class="eyebrow margin-b-16"><span class="bullet">&bull;</span> <span class="label">Emerging Market Monitor</span></p>
+								
+								<h2 class="sans margin-b-8">Is manufacturing shifting from China to India?</h2>
+								
 								<p class="disclaimer">As of 26 October 2023</p>
 								<p class="disclaimer">Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG</p>
-								<p class="disclaimer">Source: Lazard, JP Morgan</p>
-								<br>
-								<p class="paragraph-2">As the United States and European Union increase tariffs on Chinese exports and China becomes more difficult for investors to navigate, companies may be looking to move production away from China to more attractive alternatives. While countries like Mexico, Poland, Vietnam, and Thailand vie for the top spot, India, with its young population and growing economy, might be leading the pack.</p>
-								<br>
+								<p class="disclaimer margin-b-16">Source: Lazard, JP Morgan</p>
+								
+								<p class="paragraph-2 margin-b-16">As the United States and European Union increase tariffs on Chinese exports and China becomes more difficult for investors to navigate, companies may be looking to move production away from China to more attractive alternatives. While countries like Mexico, Poland, Vietnam, and Thailand vie for the top spot, India, with its young population and growing economy, might be leading the pack.</p>
 								
 								<!--
 									Component: Button
@@ -68,12 +67,12 @@
 								-->
 								<!--[if mso]>
 									<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
-										style="height:32px;v-text-anchor:middle;color:#ffffff;width:98px;" 
+										style="height:32px;v-text-anchor:middle;color:#ffffff;width:262px;" 
 										fillcolor="#00539A">
 										<w:anchorlock/>
 										<center class="mso">
 								<![endif]-->
-								<a target="_blank" href="https://lazard.com/" style="width: 98px" class="btn pill @@variant">
+								<a target="_blank" href="https://lazard.com/" style="max-width: 262px" class="btn pill @@variant">
 									<!--[if !mso]><!--><span><!--<![endif]-->Read Emerging Markets Monitor<!--[if !mso]><!--></span><!--<![endif]-->
 								</a>
 								<!--[if mso]>
@@ -100,22 +99,22 @@
 						<tr>
 							<td class="frame"></td>
 							<td class="content">
-								<h2 class="sans">Explore a New Perspective on AI from Our Team</h2>
-								<br>
-								<p class="paragraph-2">This paper explores the investment applications of small language models and their advantages over large language models.</p>
-								<br>
+								<h2 class="sans margin-b-16">Explore a New Perspective on AI from Our Team</h2>
+								
+								<p style="max-width: 404px;" class="d-block paragraph-2 margin-b-16">This paper explores the investment applications of small language models and their advantages over large language models.</p>
+								
 								<!--
 									Component: Pill Button
 									Variant: Primary, Sapphire
 								-->
 								<!--[if mso]>
 									<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
-										style="height:32px;v-text-anchor:middle;color:#ffffff;width:98px;"
+										style="height:32px;v-text-anchor:middle;color:#ffffff;width:136px;"
 										fillcolor="#00539A">
 										<w:anchorlock/>
 										<center class="mso">
 								<![endif]-->
-								<a target="_blank" href="https://lazard.com/" style="width: 98px" class="btn pill">
+								<a target="_blank" href="https://lazard.com/" style="width: 136px" class="btn pill">
 									<!--[if !mso]><!--><span><!--<![endif]-->Learn More<!--[if !mso]><!--></span><!--<![endif]-->
 								</a>
 								<!--[if mso]>
