--- a/src/modules/one-column-contents/shift-right/templates/template.html
+++ b/src/modules/one-column-contents/shift-right/templates/template.html
@@ -7,9 +7,9 @@
 		<td class="frame"></td>
 		<td class="content h-flush">
 			<table style="width: 100%;" cellpadding="8px" cellspacing="0" role="presentation">
-				<tr class="layout_mobile-one-column">
-					<td width="124" style="font-size:1px; line-height:21px;" class="column">&nbsp;</td>
-					<td class="column">
+				<tr class="">
+					
+					<td style="margin-left: 124px;" class="">
 						<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">What's Trending</span></p>
 						<br>
 						<h2 class="sans">One chart you need to see</h2>
@@ -22,7 +22,7 @@
 						<br>
 						@@include("components/buttons/text/template.html", {
 							variant: "",
-							href: "https://lazard.com",
+							href: "https://www.lazardassetmanagement.com",
 							label: "Text Button"
 						})
 					</td>
