--- a/src/modules/tables/thumbnail/templates/template.html
+++ b/src/modules/tables/thumbnail/templates/template.html
@@ -25,7 +25,7 @@
 						<br>
 						@@include("components/buttons/text/template.html", {
 							variant: "",
-							href: "https://lazard.com",
+							href: "https://www.lazardassetmanagement.com",
 							label: "Download"
 						})
 					</td>
@@ -42,7 +42,7 @@
 						<br>
 						@@include("components/buttons/text/template.html", {
 							variant: "",
-							href: "https://lazard.com",
+							href: "https://www.lazardassetmanagement.com",
 							label: "Download"
 						})
 					</td>
@@ -59,7 +59,7 @@
 						<br>
 						@@include("components/buttons/text/template.html", {
 							variant: "",
-							href: "https://lazard.com",
+							href: "https://www.lazardassetmanagement.com",
 							label: "Download"
 						})
 					</td>
@@ -76,7 +76,7 @@
 						<br>
 						@@include("components/buttons/text/template.html", {
 							variant: "",
-							href: "https://lazard.com",
+							href: "https://www.lazardassetmanagement.com",
 							label: "Download"
 						})
 					</td>
@@ -93,7 +93,7 @@
 						<br>
 						@@include("components/buttons/text/template.html", {
 							variant: "",
-							href: "https://lazard.com",
+							href: "https://www.lazardassetmanagement.com",
 							label: "Download"
 						})
 					</td>
@@ -110,7 +110,7 @@
 						<br>
 						@@include("components/buttons/text/template.html", {
 							variant: "",
-							href: "https://lazard.com",
+							href: "https://www.lazardassetmanagement.com",
 							label: "Download"
 						})
 					</td>
