--- a/src/modules/three-column-contents/three-thumbnail/templates/template.html
+++ b/src/modules/three-column-contents/three-thumbnail/templates/template.html
@@ -17,7 +17,7 @@
 						<p class="paragraph-3 margin-b-12">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
 						@@include("components/buttons/text/template.html", {
 							variant: "",
-							href: "https://lazard.com",
+							href: "https://www.lazardassetmanagement.com",
 							label: "Subscribe"
 						})
 					</td>
@@ -29,7 +29,7 @@
 						<p class="paragraph-3 margin-b-12">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
 						@@include("components/buttons/text/template.html", {
 							variant: "",
-							href: "https://lazard.com",
+							href: "https://www.lazardassetmanagement.com",
 							label: "Subscribe"
 						})
 					</td>
@@ -41,7 +41,7 @@
 						<p class="paragraph-3 margin-b-12">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
 						@@include("components/buttons/text/template.html", {
 							variant: "",
-							href: "https://lazard.com",
+							href: "https://www.lazardassetmanagement.com",
 							label: "Subscribe"
 						})
 					</td>
