--- a/src/modules/two-column-contents/full-content/templates/template.html
+++ b/src/modules/two-column-contents/full-content/templates/template.html
@@ -30,9 +30,9 @@
 
 						<div class="mso_list">
 							<ul class="g_list" style="" align="left" type="disc">
-									<li class="link-2"><a target="_blank" href="https://lazard.com">Lazard US Offshore Fund Offerings</a></li>
-									<li class="link-2"><a target="_blank" href="https://lazard.com">Lazard US Offshore Fund Offerings</a></li>
-									<li class="link-2"><a target="_blank" href="https://lazard.com">Lazard US Offshore Fund Offerings</a></li>
+									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
+									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
+									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
 							</ul>
 						</div>
 						<br>
@@ -72,7 +72,7 @@
 
 						@@include("components/buttons/text/template.html", {
 							variant: "",
-							href: "https://lazard.com",
+							href: "https://www.lazardassetmanagement.com",
 							label: "Read more"
 						})
 					</td>
@@ -98,9 +98,9 @@
 
 						<div class="mso_list">
 							<ul class="g_list" style="" align="left" type="disc">
-									<li class="link-2"><a target="_blank" href="https://lazard.com">Lazard US Offshore Fund Offerings</a></li>
-									<li class="link-2"><a target="_blank" href="https://lazard.com">Lazard US Offshore Fund Offerings</a></li>
-									<li class="link-2"><a target="_blank" href="https://lazard.com">Lazard US Offshore Fund Offerings</a></li>
+									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
+									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
+									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
 							</ul>
 						</div>
 						<br>
@@ -140,7 +140,7 @@
 
 						@@include("components/buttons/text/template.html", {
 							variant: "",
-							href: "https://lazard.com",
+							href: "https://www.lazardassetmanagement.com",
 							label: "See all highlights"
 						})
 					</td>
