--- a/src/templates/lazard-connect.html
+++ b/src/templates/lazard-connect.html
@@ -57,13 +57,13 @@
 												Variant: Primary, Sapphire
 											-->
 											<!--[if mso]>
-												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
+												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://www.lazardassetmanagement.com" arcsize="50%" stroke="f" 
 													style="height:32px;v-text-anchor:middle;color:#ffffff;width:100%;" 
 													fillcolor="#00539A">
 													<w:anchorlock/>
 													<center class="mso">
 											<![endif]-->
-											<a target="_blank" href="https://lazard.com/" style="width: 100%" class="btn pill">
+											<a target="_blank" href="https://www.lazardassetmanagement.com" style="width: 100%" class="btn pill">
 												<!--[if !mso]><!--><span><!--<![endif]-->Visit<!--[if !mso]><!--></span><!--<![endif]-->
 											</a>
 											<!--[if mso]>
@@ -406,13 +406,13 @@
 												Variant: Primary, Onyx
 											-->
 											<!--[if mso]>
-												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
+												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://www.lazardassetmanagement.com" arcsize="50%" stroke="f" 
 													style="height:32px;v-text-anchor:middle;color:#ffffff;width:100%;" 
 													fillcolor="#171A1C">
 													<w:anchorlock/>
 													<center class="mso">
 											<![endif]-->
-											<a target="_blank" href="https://lazard.com/" style="width: 100%;" class="btn pill onyx @@variant">
+											<a target="_blank" href="https://www.lazardassetmanagement.com" style="width: 100%;" class="btn pill onyx @@variant">
 												<!--[if !mso]><!--><span><!--<![endif]-->Visit<!--[if !mso]><!--></span><!--<![endif]-->
 											</a>
 											<!--[if mso]>
