--- a/src/components/buttons/pills/templates/template.msoDark.secondary.sapphire.html
+++ b/src/components/buttons/pills/templates/template.msoDark.secondary.sapphire.html
@@ -3,13 +3,13 @@
 	Variant: Secondary, MSO Dark, Sapphire
 -->
 <!--[if mso]>
-	<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" fill="f"
+	<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://www.lazardassetmanagement.com" arcsize="50%" fill="f"
 		style="height:32px;v-text-anchor:middle;color:#ffffff;width:@@width;"
 		strokecolor="#ffffff">
 		<w:anchorlock/>
 		<center class="mso">
 <![endif]-->
-<a target="_blank" href="https://lazard.com/" style="width: @@width" class="btn pill secondary @@variant">
+<a target="_blank" href="https://www.lazardassetmanagement.com" style="width: @@width" class="btn pill secondary @@variant">
 	<!--[if !mso]><!--><span><!--<![endif]-->@@label<!--[if !mso]><!--></span><!--<![endif]-->
 </a>
 <!--[if mso]>
