--- a/src/components/buttons/pills/templates/template.primary.onyx.html
+++ b/src/components/buttons/pills/templates/template.primary.onyx.html
@@ -3,13 +3,13 @@
 	Variant: Primary, Onyx
 -->
 <!--[if mso]>
-	<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
+	<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://www.lazardassetmanagement.com" arcsize="50%" stroke="f" 
 		style="height:32px;v-text-anchor:middle;color:#ffffff;width:@@width;" 
 		fillcolor="#171A1C">
 		<w:anchorlock/>
 		<center class="mso">
 <![endif]-->
-<a target="_blank" href="https://lazard.com/" style="width: @@width"  class="btn pill onyx @@variant">
+<a target="_blank" href="https://www.lazardassetmanagement.com" style="width: @@width"  class="btn pill onyx @@variant">
 	<!--[if !mso]><!--><span><!--<![endif]-->@@label<!--[if !mso]><!--></span><!--<![endif]-->
 </a>
 <!--[if mso]>
