--- a/src/components/components.html
+++ b/src/components/components.html
@@ -138,10 +138,10 @@
 							<td>
 								<div class="mso_list">
 									<ul class="g_list" style="" align="left" type="disc">
-											<li class="link-2"><a target="_blank" href="https://lazard.com">Outlook on Emerging Markets</a></li>
-											<li class="link-2"><a target="_blank" href="https://lazard.com">Outlook on Europe</a></li>
-											<li class="link-2"><a target="_blank" href="https://lazard.com">Outlook on Japan</a></li>
-											<li class="link-2"><a target="_blank" href="https://lazard.com">Outlook on the United Kingdom</a></li>
+											<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Outlook on Emerging Markets</a></li>
+											<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Outlook on Europe</a></li>
+											<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Outlook on Japan</a></li>
+											<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Outlook on the United Kingdom</a></li>
 									</ul>
 								</div>
 								
@@ -460,7 +460,7 @@
 							<td class="">
 								@@include("components/buttons/text/template.html", {
 									variant: "",
-									href: "https://lazard.com",
+									href: "https://www.lazardassetmanagement.com",
 									label: "Text Button"
 								})
 							</td>
@@ -470,7 +470,7 @@
 							<td class="dark">
 								@@include("components/buttons/text/template.html", {
 									variant: "",
-									href: "https://lazard.com",
+									href: "https://www.lazardassetmanagement.com",
 									label: "Text Button"
 								})
 							</td>
