--- a/src/modules/one-column-contents/basic/templates/template.onyx.html
+++ b/src/modules/one-column-contents/basic/templates/template.onyx.html
@@ -28,10 +28,10 @@
 
 			<div class="mso_list">
 				<ul class="g_list" style="" align="left" type="disc">
-						<li class="link-2"><a target="_blank" href="https://lazard.com">Outlook on Emerging Markets</a></li>
-						<li class="link-2"><a target="_blank" href="https://lazard.com">Outlook on Europe</a></li>
-						<li class="link-2"><a target="_blank" href="https://lazard.com">Outlook on Japan</a></li>
-						<li class="link-2"><a target="_blank" href="https://lazard.com">Outlook on the United Kingdom</a></li>
+						<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Outlook on Emerging Markets</a></li>
+						<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Outlook on Europe</a></li>
+						<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Outlook on Japan</a></li>
+						<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Outlook on the United Kingdom</a></li>
 				</ul>
 			</div>
 			<br>
