--- a/src/modules/two-column-contents/full-content/templates/template.dark.html
+++ b/src/modules/two-column-contents/full-content/templates/template.dark.html
@@ -30,10 +30,10 @@
 
 						<div class="mso_list">
 							<ul class="g_list" style="" align="left" type="disc">
-									<li class="link-2"><a target="_blank" href="https://lazard.com">Lazard US Offshore Fund Offerings</a></li>
-									<li class="link-2"><a target="_blank" href="https://lazard.com">Lazard US Offshore Fund Offerings</a></li>
-									<li class="link-2"><a target="_blank" href="https://lazard.com">Lazard US Offshore Fund Offerings</a></li>
-									<li class="link-2"><a target="_blank" href="https://lazard.com">Lazard US Offshore Fund Offerings</a></li>
+									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
+									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
+									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
+									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
 							</ul>
 						</div>
 						<br>
@@ -73,7 +73,7 @@
 
 						@@include("components/buttons/text/template.html", {
 							variant: "",
-							href: "https://lazard.com",
+							href: "https://www.lazardassetmanagement.com",
 							label: "Read more"
 						})
 					</td>
@@ -99,10 +99,10 @@
 
 						<div class="mso_list">
 							<ul class="g_list" style="" align="left" type="disc">
-									<li class="link-2"><a target="_blank" href="https://lazard.com">Lazard US Offshore Fund Offerings</a></li>
-									<li class="link-2"><a target="_blank" href="https://lazard.com">Lazard US Offshore Fund Offerings</a></li>
-									<li class="link-2"><a target="_blank" href="https://lazard.com">Lazard US Offshore Fund Offerings</a></li>
-									<li class="link-2"><a target="_blank" href="https://lazard.com">Lazard US Offshore Fund Offerings</a></li>
+									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
+									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
+									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
+									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
 							</ul>
 						</div>
 						<br>
@@ -142,7 +142,7 @@
 
 						@@include("components/buttons/text/template.html", {
 							variant: "",
-							href: "https://lazard.com",
+							href: "https://www.lazardassetmanagement.com",
 							label: "See all highlights"
 						})
 					</td>
