--- a/src/modules/two-column-contents/image-right/templates/template.dark.html
+++ b/src/modules/two-column-contents/image-right/templates/template.dark.html
@@ -18,7 +18,7 @@
 						
 						<div class="mso_list">
 							<ul class="g_list" style="" align="left" type="disc">
-									<li class="link-2"><a target="_blank" href="https://lazard.com">Lazard US Offshore Fund Offerings</a></li>
+									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
 							</ul>
 						</div>
 						<br>
