--- a/src/templates/em-monitor.html
+++ b/src/templates/em-monitor.html
@@ -66,13 +66,13 @@
 									Variant: Primary, Sapphire
 								-->
 								<!--[if mso]>
-									<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
+									<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://www.lazardassetmanagement.com" arcsize="50%" stroke="f" 
 										style="height:32px;v-text-anchor:middle;color:#ffffff;width:262px;" 
 										fillcolor="#00539A">
 										<w:anchorlock/>
 										<center class="mso">
 								<![endif]-->
-								<a target="_blank" href="https://lazard.com/" style="max-width: 262px" class="btn pill @@variant">
+								<a target="_blank" href="https://www.lazardassetmanagement.com" style="max-width: 262px" class="btn pill @@variant">
 									<!--[if !mso]><!--><span><!--<![endif]-->Read Emerging Markets Monitor<!--[if !mso]><!--></span><!--<![endif]-->
 								</a>
 								<!--[if mso]>
@@ -108,13 +108,13 @@
 									Variant: Primary, Sapphire
 								-->
 								<!--[if mso]>
-									<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
+									<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://www.lazardassetmanagement.com" arcsize="50%" stroke="f" 
 										style="height:32px;v-text-anchor:middle;color:#ffffff;width:136px;"
 										fillcolor="#00539A">
 										<w:anchorlock/>
 										<center class="mso">
 								<![endif]-->
-								<a target="_blank" href="https://lazard.com/" style="width: 136px" class="btn pill">
+								<a target="_blank" href="https://www.lazardassetmanagement.com" style="width: 136px" class="btn pill">
 									<!--[if !mso]><!--><span><!--<![endif]-->Learn More<!--[if !mso]><!--></span><!--<![endif]-->
 								</a>
 								<!--[if mso]>
