--- a/src/templates/engage-lazard.html
+++ b/src/templates/engage-lazard.html
@@ -47,13 +47,13 @@
 												Variant: Primary, Sapphire
 											-->
 											<!--[if mso]>
-												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
+												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://www.lazardassetmanagement.com" arcsize="50%" stroke="f" 
 													style="height:32px;v-text-anchor:middle;color:#ffffff;width:98px;" 
 													fillcolor="#00539A">
 													<w:anchorlock/>
 													<center>
 											<![endif]-->
-											<a target="_blank" href="https://lazard.com/" style="width: 98px" class="btn pill">
+											<a target="_blank" href="https://www.lazardassetmanagement.com" style="width: 98px" class="btn pill">
 												<!--[if !mso]><!--><span><!--<![endif]-->Visit<!--[if !mso]><!--></span><!--<![endif]-->
 											</a>
 											<!--[if mso]>
@@ -92,13 +92,13 @@
 												Variant: Primary, MSO Dark, Sapphire
 											-->
 											<!--[if mso]>
-												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
+												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://www.lazardassetmanagement.com" arcsize="50%" stroke="f" 
 													style="height:32px;v-text-anchor:middle;color:#00539A;width:98px;" 
 													fillcolor="#ffffff">
 													<w:anchorlock/>
 													<center class="mso">
 											<![endif]-->
-											<a target="_blank" href="https://lazard.com/" style="width: 98px" class="btn pill @@variant">
+											<a target="_blank" href="https://www.lazardassetmanagement.com" style="width: 98px" class="btn pill @@variant">
 												<!--[if !mso]><!--><span><!--<![endif]-->Visit<!--[if !mso]><!--></span><!--<![endif]-->
 											</a>
 											<!--[if mso]>
@@ -133,18 +133,18 @@
 											<img src="https://placehold.co/194x194" alt="Strategy thumbnail" width="194px" class="d-block">
 										</td>
 										<td style="vertical-align: middle; width: 194px;" class="column" align="left">
-											<p class="paragraph-3">
+											<p class="paragraph-3 margin-b-16">
 												Investors can now access Lazard's flagship Global Listed Infrastructure Fund as an exchange traded fund (ETF), using the ticker 'GIFL'.
 											</p>
-											<br>
+											
 											<p>
 												Explore the Lazard Global Listed
 											</p>
-											<p>
+											<p class="margin-b-16">
 												Infrastructure Active ETF page today
 											</p>
-											<br>
-											<a href="https://lazard.com" class="btn text ">Subscribe <span>&#8594;</span></a>
+											
+											<a href="https://www.lazardassetmanagement.com" class="btn text ">Subscribe <span>&#8594;</span></a>
 										</td>
 									</tr>
 								</table>
@@ -274,7 +274,7 @@
 												</tr>
 											</table>
 			
-											<a href="https://lazard.com" class="btn text margin-t-16">Read more <span>&#8594;</span></a>
+											<a href="https://www.lazardassetmanagement.com" class="btn text margin-t-16">Read more <span>&#8594;</span></a>
 										</td>
 										<td class="column">
 											<!-- <img style="" src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_ContentImage_Station.png" alt="Second Column Feature image" width="263" border="0" class="d-block"> -->
@@ -382,7 +382,7 @@
 												</tr>
 											</table>
 			
-											<a href="https://lazard.com" class="btn text margin-t-16">See all highlights <span>&#8594;</span></a>
+											<a href="https://www.lazardassetmanagement.com" class="btn text margin-t-16">See all highlights <span>&#8594;</span></a>
 										</td>
 									</tr>
 								</table>
@@ -415,13 +415,13 @@
 												Variant: Primary, Sapphire
 											-->
 											<!--[if mso]>
-												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
+												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://www.lazardassetmanagement.com" arcsize="50%" stroke="f" 
 													style="height:32px;v-text-anchor:middle;color:#ffffff;width:98px;" 
 													fillcolor="#00539A">
 													<w:anchorlock/>
 													<center>
 											<![endif]-->
-											<a target="_blank" href="https://lazard.com/" style="width: 98px" class="btn pill">
+											<a target="_blank" href="https://www.lazardassetmanagement.com" style="width: 98px" class="btn pill">
 												<!--[if !mso]><!--><span><!--<![endif]-->Download<!--[if !mso]><!--></span><!--<![endif]-->
 											</a>
 											<!--[if mso]>
@@ -460,7 +460,7 @@
 											
 											<p class="margin-b-16">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
 											
-											<a href="https://lazard.com" class="btn text ">Download <span>&#8594;</span></a>
+											<a href="https://www.lazardassetmanagement.com" class="btn text ">Download <span>&#8594;</span></a>
 										</td>
 									</tr>
 								</table>
@@ -498,13 +498,13 @@
 												Variant: Primary, Sapphire
 											-->
 											<!--[if mso]>
-												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
-													style="height:32px;v-text-anchor:middle;color:#ffffff;width:100%;" 
+												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://www.lazardassetmanagement.com" arcsize="50%" stroke="f" 
+													style="height:32px;v-text-anchor:middle;color:#ffffff;width:98px;" 
 													fillcolor="#00539A">
 													<w:anchorlock/>
 													<center>
 											<![endif]-->
-											<a target="_blank" href="https://lazard.com/" style="width: 100%" class="btn pill">
+											<a target="_blank" href="https://www.lazardassetmanagement.com" style="width: 98px" class="btn pill">
 												<!--[if !mso]><!--><span><!--<![endif]-->Download<!--[if !mso]><!--></span><!--<![endif]-->
 											</a>
 											<!--[if mso]>
@@ -533,12 +533,12 @@
 							<td class="frame"></td>
 							<td class="content h-flush">
 								<table style="width: 100%;" cellpadding="8px" cellspacing="0" role="presentation">
-									<tr class="layout_mobile-one-column">
-										<td width="124" style="font-size:1px; line-height:21px;" class="column">&nbsp;</td>
-										<td class="column">
+									<tr>
+										<!-- <td width="124" style="font-size:1px; line-height:21px;" class="column">&nbsp;</td> -->
+										<td class="column shift-right-md">
 											<p class="paragraph-2 margin-b-16">In Viewpoints this month, our fixed income team has sifted through central bank rate cuts, surprise election outcomes, currency swings, and mixed signals on the US economy for what investors should be watching.</p>
 											
-											<a href="https://lazard.com" class="btn text ">Text Button <span>&#8594;</span></a>
+											<a href="https://www.lazardassetmanagement.com" class="btn text ">Text Button <span>&#8594;</span></a>
 										</td>
 									</tr>
 								</table>
@@ -602,13 +602,13 @@
 												Variant: Primary, MSO Dark, Sapphire
 											-->
 											<!--[if mso]>
-												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
-													style="height:32px;v-text-anchor:middle;color:#00539A;width:100%;" 
+												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://www.lazardassetmanagement.com" arcsize="50%" stroke="f" 
+													style="height:32px;v-text-anchor:middle;color:#00539A;width:98px;" 
 													fillcolor="#ffffff">
 													<w:anchorlock/>
 													<center>
 											<![endif]-->
-											<a target="_blank" href="https://lazard.com/" style="width: 100%" class="btn pill">
+											<a target="_blank" href="https://www.lazardassetmanagement.com" style="width: 98px" class="btn pill">
 												<!--[if !mso]><!--><span><!--<![endif]-->Download<!--[if !mso]><!--></span><!--<![endif]-->
 											</a>
 											<!--[if mso]>
