--- a/src/templates/factor-report.html
+++ b/src/templates/factor-report.html
@@ -76,7 +76,7 @@
 											<br>
 											<p>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
 											<br>
-											<a href="https://lazard.com" class="btn text ">Download <span>&#8594;</span></a>
+											<a href="https://www.lazardassetmanagement.com" class="btn text ">Download <span>&#8594;</span></a>
 										</td>
 									</tr>									
 								</table>
