--- a/src/templates/fixed-income-viewpoint.html
+++ b/src/templates/fixed-income-viewpoint.html
@@ -55,13 +55,13 @@
 												Variant: Primary, Onyx
 											-->
 											<!--[if mso]>
-												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
+												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://www.lazardassetmanagement.com" arcsize="50%" stroke="f" 
 													style="height:32px;v-text-anchor:middle;color:#ffffff;width:65px;" 
 													fillcolor="#171A1C">
 													<w:anchorlock/>
 													<center class="mso">
 											<![endif]-->
-											<a target="_blank" href="https://lazard.com/" style="width: 65px;" class="btn pill onyx @@variant">
+											<a target="_blank" href="https://www.lazardassetmanagement.com" style="width: 65px;" class="btn pill onyx @@variant">
 												<!--[if !mso]><!--><span><!--<![endif]-->Visit<!--[if !mso]><!--></span><!--<![endif]-->
 											</a>
 											<!--[if mso]>
@@ -131,13 +131,13 @@
 												Variant: Primary, Onyx
 											-->
 											<!--[if mso]>
-												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
+												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://www.lazardassetmanagement.com" arcsize="50%" stroke="f" 
 													style="height:32px;v-text-anchor:middle;color:#ffffff;width:98px;" 
 													fillcolor="#171A1C">
 													<w:anchorlock/>
 													<center class="mso">
 											<![endif]-->
-											<a target="_blank" href="https://lazard.com/" style="width: 98px" class="btn pill onyx @@variant">
+											<a target="_blank" href="https://www.lazardassetmanagement.com" style="width: 98px" class="btn pill onyx @@variant">
 												<!--[if !mso]><!--><span><!--<![endif]-->Download<!--[if !mso]><!--></span><!--<![endif]-->
 											</a>
 											<!--[if mso]>
