updated some of the other templates

--- a/src/modules/one-column-contents/shift-right/templates/template.html
+++ b/src/modules/one-column-contents/shift-right/templates/template.html
@@ -9,7 +9,7 @@
 			<table style="width: 100%;" cellpadding="8px" cellspacing="0" role="presentation">
 				<tr class="">
 					
-					<td style="margin-left: 124px;" class="">
+					<td class="column shift-right-md">
 						<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">What's Trending</span></p>
 						<br>
 						<h2 class="sans">One chart you need to see</h2>
