--- a/src/templates/factor-report.html
+++ b/src/templates/factor-report.html
@@ -72,10 +72,10 @@
 											<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_Template_0216_V3_14.png" alt="Table Thumbnail">
 										</td>
 										<td>
-											<h4 class="sans" style="width: 165px;">Annual Sustainable Investment Report</h4>
-											<br>
-											<p>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
-											<br>
+											<h4 class="sans margin-b-16" style="width: 165px;">Annual Sustainable Investment Report</h4>
+											
+											<p class="margin-b-16">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
+											
 											<a href="https://www.lazardassetmanagement.com" class="btn text ">Download <span>&#8594;</span></a>
 										</td>
 									</tr>									
