--- a/src/templates/lazard-connect.html
+++ b/src/templates/lazard-connect.html
@@ -47,8 +47,8 @@
 								<table style border="0" cellpadding="8px" cellspacing="0" role="presentation" width="100%" class="layout_two-column_fluid">
 									<tr>
 										<td class="column" style="width: 404px;">
-											<h1 class="sans" style="width: 165px;">Lazard Connect</h1>
-											<br>
+											<h1 class="sans margin-b-16" style="width: 165px;">Lazard Connect</h1>
+											
 											<h2 class="subheadline">New Ideas, New Perspectives.</h2>
 										</td>
 										<td class="column align-right-md">
@@ -95,15 +95,15 @@
 								<table style="width: 100%;" cellpadding="0" cellspacing="0" role="presentation">
 									<tr class="layout_three-column">
 										<td style="width: 107px;" class="column">
-											<h3 class="sans">What's trending</h3>
-											<br>
+											<h3 class="sans margin-b-16">What's trending</h3>
+											
 											<p class="paragraph-2">The latest market commentary from our thought leaders.</p>
 										</td>
 										<td class="column">
-											<h4 class="sans">In praise of small language models</h4>
-											<br>
-											<p class="paragraph-2">The global outlook has brightened in 2024 despite some disappointing news along the way. Ronald Temple, Chief Market Strategist, analyzes the forces that stand to impact global markets as the second half of 2024 unfolds, including the results of a razor's-edge US election, China's ongoing housing challenges, and potential Eurozone policy easing.</p>											
-											<br>
+											<h4 class="sans margin-b-16">In praise of small language models</h4>
+											
+											<p class="paragraph-2 margin-b-16">The global outlook has brightened in 2024 despite some disappointing news along the way. Ronald Temple, Chief Market Strategist, analyzes the forces that stand to impact global markets as the second half of 2024 unfolds, including the results of a razor's-edge US election, China's ongoing housing challenges, and potential Eurozone policy easing.</p>											
+											
 											<table role="presentation" cellpadding="0" cellspacing="0" class="btn open-in-new">
 												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
@@ -133,7 +133,7 @@
 													</td>
 												</tr>
 											</table>
-											<br>
+											
 											<table role="presentation" cellpadding="0" cellspacing="0" class="btn open-in-new">
 												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
@@ -163,7 +163,7 @@
 													</td>
 												</tr>
 											</table>
-											<br>
+											
 											<table role="presentation" cellpadding="0" cellspacing="0" class="btn open-in-new">
 												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
@@ -193,11 +193,11 @@
 													</td>
 												</tr>
 											</table>
-											<br>										
+																				
 										</td>
 										<td class="column">
-											<h4 class="sans">In praise of small language models</h4>
-											<br>
+											<h4 class="sans margin-b-16">In praise of small language models</h4>
+											
 											<p class="paragraph-2">Large language models (LLMs) are progressing at breakneck speed, captivating investors and sweeping through markets. However, their tendency to hallucinate and their inherent opacity limit their utility for investment decisions. Small language models (SLMs), in contrast, offer reliability and interpretability. These qualities make SLMs especially well-suited for answering highly specific questions, as this paper demonstrates using a case study on China's housing market slowdown.</p>
 										</td>
 									</tr>
@@ -224,15 +224,15 @@
 								<table style="width: 100%;" cellpadding="0" cellspacing="0" role="presentation">
 									<tr class="layout_three-column">
 										<td style="width: 107px;" class="column">
-											<h3 class="sans">What's trending</h3>
-											<br>
+											<h3 class="sans margin-b-16">What's trending</h3>
+											
 											<p class="paragraph-2">The latest market commentary from our thought leaders.</p>
 										</td>
 										<td class="column">
-											<h4 class="sans">In praise of small language models</h4>
-											<br>
-											<p class="paragraph-2">The global outlook has brightened in 2024 despite some disappointing news along the way. Ronald Temple, Chief Market Strategist, analyzes the forces that stand to impact global markets as the second half of 2024 unfolds, including the results of a razor's-edge US election, China's ongoing housing challenges, and potential Eurozone policy easing.</p>											
-											<br>
+											<h4 class="sans margin-b-16">In praise of small language models</h4>
+											
+											<p class="paragraph-2 margin-b-16">The global outlook has brightened in 2024 despite some disappointing news along the way. Ronald Temple, Chief Market Strategist, analyzes the forces that stand to impact global markets as the second half of 2024 unfolds, including the results of a razor's-edge US election, China's ongoing housing challenges, and potential Eurozone policy easing.</p>											
+											
 											<table role="presentation" cellpadding="0" cellspacing="0" class="btn open-in-new">
 												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
@@ -262,7 +262,7 @@
 													</td>
 												</tr>
 											</table>
-											<br>
+											
 											<table role="presentation" cellpadding="0" cellspacing="0" class="btn open-in-new">
 												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
@@ -292,7 +292,7 @@
 													</td>
 												</tr>
 											</table>
-											<br>
+											
 											<table role="presentation" cellpadding="0" cellspacing="0" class="btn open-in-new">
 												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
@@ -322,11 +322,11 @@
 													</td>
 												</tr>
 											</table>
-											<br>										
+																			
 										</td>
 										<td class="column">
-											<h4 class="sans">In praise of small language models</h4>
-											<br>
+											<h4 class="sans margin-b-16">In praise of small language models</h4>
+											
 											<p class="paragraph-2">Large language models (LLMs) are progressing at breakneck speed, captivating investors and sweeping through markets. However, their tendency to hallucinate and their inherent opacity limit their utility for investment decisions. Small language models (SLMs), in contrast, offer reliability and interpretability. These qualities make SLMs especially well-suited for answering highly specific questions, as this paper demonstrates using a case study on China's housing market slowdown.</p>
 										</td>
 									</tr>
@@ -363,17 +363,16 @@
 								<!--
 									Component: Eyebrow
 								-->
-								<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">Your Team</span></p>
-								<br>
-								<h3 class="sans">Investment Grade Corporate and Sovereign Yields Are Eye-Catching</h3>
-								<br>
-								<h2 class="subheadline">Emerging Markets Investment Grade Yields</h2>
-								<br>
+								<p class="eyebrow margin-b-16"><span class="bullet">&bull;</span> <span class="label">Your Team</span></p>
+								
+								<h3 class="sans margin-b-16">Investment Grade Corporate and Sovereign Yields Are Eye-Catching</h3>
+								
+								<h2 class="subheadline margin-b-16">Emerging Markets Investment Grade Yields</h2>
+								
 								<!-- <img style src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_ContentImage_1YGraph.png" alt="1Y Grades Chart" class="mw-100" /> -->
 								<img src="https://placehold.co/543x304" alt="Feature Image" width="543" height="auto">
-								<p></p> <!-- Spacer <p> for MSO image margin -->
-								<br>
-								<p class="disclaimer">As of 26 October 2023</p>
+								
+								<p class="disclaimer margin-b-16 margin-t-16">As of 26 October 2023</p>
 								<p class="disclaimer">Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG</p>
 								<p class="disclaimer">Source: Lazard, JP Morgan</p>
 							</td>
